--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="icon" type="image/svg+xml" href="/src/public/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Kontenbase</title>
+    <title>mcwin.bet - Minecraft Betting Server</title>
   </head>
 
   <body class="font-inter antialiased bg-white text-gray-900 tracking-tight">
